Your descriptive commit message

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
 <body class="page-auth">
   <div class="login-wrapper">
     <div class="card">
-      <h2 class="card-title">🔐 Connexion</h2>
+      <h2 class="card-title">Connexion</h2>
 
       <form id="loginForm" onsubmit="event.preventDefault(); login();">
         <div class="form-group">
