--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -4,30 +4,107 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dashboard - Auth App</title>
+
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+
+  <style>
+    body {
+      background-color: #f4f6f9;
+    }
+
+    .card {
+      max-width: 600px;
+      margin: auto;
+      border-radius: 10px;
+    }
+   
+  </style>
 </head>
 <body>
-<div class="container">
-  <div class="card">
-    <h3>👋 Bienvenue</h3>
-    <p id="welcome" class="welcome-message"></p>
-    <div class="divider" style="margin-top: 30px;">
-      <button class="btn btn-secondary" id="logout">Se déconnecter</button>
+
+<!-- NAVBAR -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top shadow">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="dashboard.html">BusinessApp </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item"><a class="nav-link active" href="dashboard.html">Dashboard</a></li>
+        <li class="nav-item"><a class="nav-link" href="profile.html">Profil</a></li>
+        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+
+      </ul>
+
+      <!-- Menu utilisateur dynamique -->
+
+      <div class="dropdown">
+        <a class="btn btn-light dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" id="navUser"></a>
+        <ul class="dropdown-menu dropdown-menu-end" id="userMenu">
+          <li><a class="dropdown-item" href="profile.html">Voir le profil</a></li>
+          <!-- Paramètres ajouté dynamiquement -->
+          <li><hr class="dropdown-divider"></li>
+          <li><button class="dropdown-item text-danger" id="logoutNav">Déconnexion</button></li>
+        </ul>
+      </div>
     </div>
   </div>
+</nav>
+
+<!-- CONTENU -->
+<div class="container mt-5 pt-5">
+  <div class="card p-4 shadow text-center">
+    <h3>👋 Bienvenue</h3>
+    <p id="welcome" class="mb-4"></p>
+
+    <p>
+      Connecté en tant que : 
+      <a href="profile.html" id="dashboardUser" class="fw-bold"></a>
+    </p>
+
+    <button class="btn btn-secondary" id="logout">Se déconnecter</button>
+  </div>
 </div>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 <script>
+  // Récupération de l'utilisateur
   const user = JSON.parse(localStorage.getItem('user') || 'null');
-  if (!user) {
-    window.location.href = 'index.html';
-  } else {
+  const showSettings = true; // true → afficher "Paramètres", false → le supprimer
+
+  if (!user) window.location.href = 'index.html';
+  else {
     document.getElementById('welcome').innerText = `Bienvenue, ${user.username}!`;
+    document.getElementById('dashboardUser').innerText = user.username;
+    document.getElementById('navUser').innerText = user.username;
+
+    // Menu Paramètres dynamique
+    if (showSettings) {
+      const settingsItem = document.createElement('li');
+      const settingsLink = document.createElement('a');
+      settingsLink.className = 'dropdown-item';
+      settingsLink.href = 'settings.html';
+      settingsLink.textContent = 'Paramètres';
+      settingsItem.appendChild(settingsLink);
+
+      const menu = document.getElementById('userMenu');
+      menu.insertBefore(settingsItem, menu.querySelector('hr'));
+    }
   }
-  document.getElementById('logout').addEventListener('click', () => {
+
+  // Logout
+  function logout() {
     localStorage.removeItem('user');
     window.location.href = 'index.html';
-  });
+  }
+  document.getElementById('logout').addEventListener('click', logout);
+  document.getElementById('logoutNav').addEventListener('click', logout);
 </script>
+
 </body>
 </html>
