--- a/frontend/register.html
+++ b/frontend/register.html
@@ -10,15 +10,18 @@
 <body class="page-auth">
 <div class="container">
   <div class="card">
-    <h3>✨ S'inscrire</h3>
+    <h3> S'inscrire</h3>
     <div class="form-group">
-      <input id="username" class="form-control" placeholder="Nom d'utilisateur" aria-label="Nom d'utilisateur">
+      <input id="username" class="form-control" placeholder="Nom et prénom d'utilisateur" aria-label="Nom d'utilisateur">
     </div>
     <div class="form-group">
       <input id="email" type="email" class="form-control" placeholder="Votre email" aria-label="Email">
     </div>
     <div class="form-group">
       <input id="password" type="password" class="form-control" placeholder="Mot de passe (min. 6 caractères)" aria-label="Mot de passe">
+    </div>
+    <div class="form-group">
+      <input id="confirmpass" type="password" class="form-control" placeholder="confirmer mot de passe " aria-label="Mot de passe" >
     </div>
     <button class="btn btn-primary" onclick="register()" id="registerBtn">Créer un compte</button>
     <p id="msg" class="message"></p>
